# wyldlands

./: .dockerignore  Cargo.toml  DOCKER.md  Makefile  NOTES.md  README.md  TODO_CLEANUP.md  docker-compose.yml
.bob/rules/: myrules.md
.config/: nextest.toml
.github/workflows/: ci.yml
.junie/: guidelines.md
common/: Cargo.toml  build.rs
common/proto/: gateway.proto
common/src/: account.rs  character.rs  gateway.rs  lib.rs  session.rs  utility.rs
database/: Dockerfile
docs/: BUILDER_COMMANDS.md  COMBAT_SYSTEM.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  FEATURE_ROADMAP.md  HELP_SYSTEM.md  LLM_GENERATION.md  NPC_SYSTEM.md  README.md  RECENT_ADDITIONS.md
docs/ADR/: ADR-0000-Index-of-ADRs.md  ADR-0001-ADR-Template.md  ADR-0002-Use-Markdown-Architectural-Decision-Records.md  ADR-0003-Use-Rust-Programming-Language.md  ADR-0004-Use-Entity-Component-System.md  ADR-0005-Gateway-Server-Separation.md  ADR-0006-Layered-State-Machine-Architecture.md  ADR-0007-Use-gRPC-for-Inter-Service-Communication.md  ADR-0008-Use-PostgreSQL-for-Persistence.md  ADR-0009-Protocol-Independence-Design.md  ADR-0010-Cargo-Workspace-Structure.md  ADR-0011-Character-Creation-System-Architecture.md  ADR-0012-Session-State-Management-Strategy.md  ADR-0013-LLM-Integration-Architecture.md  ADR-0014-GOAP-AI-System-Design.md  ADR-0015-Database-Schema-Evolution-Strategy.md  ADR-0016-Testing-Strategy-and-Coverage-Requirements.md  ADR-0017-Side-Channel-Protocol-Support.md  ADR-0018-Input-Mode-Architecture.md  ADR-0019-Error-Handling-and-Recovery-Strategy.md  ADR-0020-Configuration-Management-Approach.md  ADR-0021-Docker-Deployment-Architecture.md  ADR-0022-Termionix-Integration-for-Telnet-Support.md  ADR-0023-Character-System-Architecture.md  ADR-0024-Reconnection-and-Session-Persistence-Strategy.md
docs/development/: AREA_ROOM_EDITOR_PROPOSAL.md  CHARACTER_CREATION_COMPLETION.md  CHARACTER_CREATION_REFACTOR.md  DATABASE_SCHEMA_PHASE6_ANALYSIS.md  DEVELOPMENT_PLAN.md  EDITOR_IMPLEMENTATION.md  GATEWAY_PROTOCOL.md  MEMORY_SYSTEM_UNIFIED.md  PHASE5_IMPLEMENTATION.md  PHASE5_SIDE_CHANNEL_IMPLEMENTATION.md  PROJECT_STATUS.md  PROTOCOL_ADAPTER_ARCHITECTURE.md  RECONNECTION_FIX.md  RECONNECTION_FIX_COMPLETE.md  RECONNECTION_IMPLEMENTATION.md  RPC_COMMAND_QUEUING.md  SESSION_STATE_ENGINE.md  SIDE_CHANNEL_IMPLEMENTATION.md  TELNET_LIBRARY_COMPARISON.md  UUID_UNIFICATION.md
docs/development/archive/: GATEWAY_WORLD_REFACTOR.md  README.md
docs/development/archive/memory_system/: MEMORY_LLM_INTEGRATION.md  MEMORY_PERFORMANCE_OPTIMIZATION.md  MEMORY_SYSTEM_COMPLETE.md  MEMORY_SYSTEM_IMPLEMENTATION.md  MEMORY_SYSTEM_NEXT_STEPS.md  MEMORY_SYSTEM_PERFORMANCE_SUMMARY.md  MEMORY_SYSTEM_RECOMMENDATIONS.md  README.md
docs/development/archive/phase1/: PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md
docs/development/archive/phase2/: PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PHASE2_STATUS.md
gateway/: .env  .env.test  Cargo.toml  Dockerfile  README.md  config.yaml
gateway/benches/: README.md  session_benchmarks.rs
gateway/defaults/: admin.css  admin.html  admin.js  client.html  client.js  login.txt  logout.txt  motd.txt  welcome.txt
gateway/src/: admin.rs  auth.rs  avatar.rs  banner.rs  config.rs  connection.rs  context.rs  grpc.rs  lib.rs  main.rs  pool.rs  properties.rs  protocol.rs  reconnection.rs  rpc_client.rs  rpc_server.rs  server.rs  session.rs  shell.rs  telnet.rs  webapp.rs  websocket.rs
gateway/src/grpc/: client.rs  server.rs
gateway/src/protocol/: msdp.rs  telnet_adapter.rs  websocket_adapter.rs
gateway/src/server/: telnet.rs  webapp.rs  websocket.rs
gateway/src/server/telnet/: adapter.rs  handler.rs  server.rs
gateway/src/server/webapp/: admin.rs
gateway/src/server/websocket/: adapter.rs
gateway/src/session/: manager.rs  store.rs  test_utils.rs
gateway/src/sidechannel/: gmcp.rs  json.rs  msdp.rs
gateway/src/telnet/: character_sheet.rs  connection.rs  login.rs  protocol.rs
gateway/src/webapp/: client.css
gateway/tests/: README.md  pool_integration_tests.rs  reconnection_fix_test.rs  reconnection_integration_tests.rs  session_integration_tests.rs
migrations/: 001_table_setup.sql  002_settings_data.sql  003_world_data.sql  004_help_data.sql
server/: .env  .env.test  Cargo.toml  Dockerfile  config.yaml
server/benches/: memory_benchmarks.rs
server/src/: account.rs  config.rs  ecs.rs  lib.rs  listener.rs  llm.rs  main.rs  models.rs  persistence.rs  session.rs
server/src/ecs/: character_builder.rs  components.rs  context.rs  events.rs  memory.rs  registry.rs  systems.rs  test_utils.rs
server/src/ecs/components/: ai.rs  character.rs  combat.rs  goap.rs  identity.rs  interaction.rs  npc.rs  persistence.rs  spatial.rs
server/src/ecs/components/ai/: emotion.rs  goap.rs
server/src/ecs/components/character/: attributes.rs  builder.rs  macros.rs  nationality.rs  skill.rs  skills.rs  talents.rs
server/src/ecs/events/: bus.rs  types.rs
server/src/ecs/systems/: actions.rs  combat.rs  command.rs  inventory.rs  movement.rs  npc_ai.rs  persistence.rs
server/src/ecs/systems/command/: admin.rs  combat.rs  comms.rs  exit.rs  help.rs  inventory.rs  llm_generate.rs  look.rs  npc.rs  score.rs
server/src/llm/: manager.rs  mod.rs  providers.rs  types.rs
server/src/llm/providers/: lmstudio.rs  mistral.rs  ollama.rs  openai.rs
server/src/models/: embeddings.rs  manager.rs  providers.rs  types.rs
server/src/models/providers/: lmstudio.rs  mistral.rs  ollama.rs  openai.rs
server/tests/: README_MEMORY_TESTS.md  builder_integration_tests.rs  character_creation_integration_tests.rs  combat_integration_tests.rs  integration_test.rs  memory_integration_tests.rs  npc_integration_tests.rs
