[package]
name = "wyldlands-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
uuid.workspace = true
tonic.workspace = true
tonic-build.workspace = true
tonic-prost.workspace = true
tonic-prost-build.workspace = true
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]
