[package]
name = "wyldlands-gateway"
description = "Gateway server for Wyldlands"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "wyldlands_gateway"
path = "src/lib.rs"

[[bin]]
name = "wyldlands-gateway"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde-env-field.workspace = true
sqlx.workspace = true
termionix-service.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wyldlands-common = { workspace = true, features = ["sqlx"] }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true
sqlx.workspace = true
tempfile = "3"
tokio-test.workspace = true

[[bench]]
name = "session_benchmarks"
harness = false
