[package]
name = "wyldlands-gateway"
description = "Gateway server for Wyldlands"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "wyldlands-gateway"
path = "src/main.rs"

[lib]
name = "wyldlands_gateway"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
metrics.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde-env-field.workspace = true
termionix-server.workspace = true
termionix-service.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true
tracing-timing.workspace = true
wyldlands-common.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
sqlx.workspace = true
tempfile.workspace = true

[[bench]]
name = "session_benchmarks"
harness = false
