[package]
name = "wyldlands-server"
description = "Wyldlans Multi-Player Dimension World Server Engine."
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv.workspace = true
hecs.workspace = true
hf-hub.workspace = true
metrics.workspace = true
moka.workspace = true
once_cell.workspace = true
mistralrs.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde-env-field.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wyldlands-common = { workspace = true, features = ["sqlx"] }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true
sqlx.workspace = true
tempfile = "3"
tokio-test.workspace = true